--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ sourceCompatibility=1.8
 targetCompatibility=1.8
 
 dependencies {
+	compile 'org.yaml:snakeyaml:1.17'
 	compile 'org.slf4j:slf4j-api:1.7.+'
   	compile 'org.apache.commons:commons-lang3:3.+'
   	compile 'commons-io:commons-io:2.4'
