--- a/build.gradle
+++ b/build.gradle
@@ -22,5 +22,9 @@ dependencies {
   	compile 'commons-beanutils:commons-beanutils:1.9.+'
   	
     testCompile 'junit:junit:4.+'
+	testCompile 'org.hamcrest:hamcrest-all:1.3'
+    testCompile 'org.apache.logging.log4j:log4j-api:2.6.2'
+    testCompile 'org.apache.logging.log4j:log4j-core:2.6.2'
+    testCompile 'org.apache.logging.log4j:log4j-slf4j-impl:2.6.2'
 }
 
