--- a/src/test/resources/person2.yaml
+++ b/src/test/resources/person2.yaml
@@ -1,8 +1,7 @@
 - !!de.beosign.snakeyamlanno.Person
   name: Homer
-  gender: m
+  height: 1.85 m
 - !!de.beosign.snakeyamlanno.Person
   name: Marge
-  gender: f
   animal: !!de.beosign.snakeyamlanno.Person$Dog
     loudness: 5
