--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: java
 jdk:
   - oraclejdk8
   
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+    
 notifications:
   email:
     - florian.dahlmanns@googlemail.com
