--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'java'
 apply plugin: 'maven'
+apply plugin: 'jacoco'
 
+check.dependsOn jacocoTestReport
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+    }
+}
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
