--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'jacoco'
 
+version = '0.1.0'
+
 check.dependsOn jacocoTestReport
 
 jacocoTestReport {
