--- a/src/test/resources/stellar1.yaml
+++ b/src/test/resources/stellar1.yaml
@@ -1,22 +1,22 @@
 # Example YAML file
 #stellarObjects:
-- !!de.beosign.snakeyamlanno.StellarObject
+- !!de.beosign.snakeyamlanno.property.StellarObject
   nameAlias: Sun
   absMag: 4.8
   radius: 695700
   type: Star
-- !!de.beosign.snakeyamlanno.StellarObject
+- !!de.beosign.snakeyamlanno.property.StellarObject
   nameAlias: Earth
 #  satellites:
-- !!de.beosign.snakeyamlanno.StellarObject
+- !!de.beosign.snakeyamlanno.property.StellarObject
   nameAlias: Moon
 #  distance: 1 AU
 #  type: Planet
-- !!de.beosign.snakeyamlanno.StellarObject
+- !!de.beosign.snakeyamlanno.property.StellarObject
   nameAlias: Ceres
   location: Asteroid Belt
   type: Asteroid
-- !!de.beosign.snakeyamlanno.StellarObject
+- !!de.beosign.snakeyamlanno.property.StellarObject
   nameAlias: Vesta
   location: Asteroid Belt
   type: Asteroid
