--- a/src/test/resources/ignoreErrorsInvalid.yaml
+++ b/src/test/resources/ignoreErrorsInvalid.yaml
@@ -1,5 +1,5 @@
 name: Homer
 gender: m
 height: 1.85 m
-animal: !!de.beosign.snakeyamlanno.Person$Dog
+animal: !!de.beosign.snakeyamlanno.property.Person$Dog
    loudness: asdasd
