--- a/build.gradle
+++ b/build.gradle
@@ -38,3 +38,38 @@ dependencies {
     testCompile 'org.apache.logging.log4j:log4j-slf4j-impl:2.6.2'
 }
 
+jar {
+    baseName = 'snakeyaml-anno'
+    into ('META-INF') {
+        from ('.') {
+            include 'README.md','LICENCE.txt','LICENCE-3RD-PARTY.txt'
+        }
+    }
+    manifest {
+        attributes 'Implementation-Title': 'Snakeyaml-Anno', 'Implementation-Version': version
+    }
+}
+
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
+// run 'gradle release' to build JAR, sources and Javadoc
+task release(dependsOn: ['build', 'jar', 'sourcesJar', 'javadocJar']) {
+    
+}
+
+
+ 
