Make snakeyaml-anno compatible with SnakeYaml 1.19

--- a/src/test/resources/person1.yaml
+++ b/src/test/resources/person1.yaml
@@ -4,5 +4,5 @@
 - !!de.beosign.snakeyamlanno.property.Person
   name: Marge
   gender: f
-  animal: !!de.beosign.snakeyamlanno.property.Person$Dog
+  animal: !!de.beosign.snakeyamlanno.type.Animal$Dog
     loudness: 5
