--- a/src/test/resources/person2.yaml
+++ b/src/test/resources/person2.yaml
@@ -3,5 +3,5 @@
   height: 1.85 m
 - !!de.beosign.snakeyamlanno.property.Person
   name: Marge
-  animal: !!de.beosign.snakeyamlanno.property.Person$Dog
+  animal: !!de.beosign.snakeyamlanno.type.Animal$Dog
     loudness: 5
