--- a/build.gradle
+++ b/build.gradle
@@ -28,14 +28,14 @@ dependencies {
 	compile 'org.yaml:snakeyaml:1.20'
 	compile 'org.slf4j:slf4j-api:1.7.+'
   	compile 'org.apache.commons:commons-lang3:3.+'
-  	compile 'commons-io:commons-io:2.4'
+  	compile 'commons-io:commons-io:2.6'
   	compile 'commons-beanutils:commons-beanutils:1.9.+'
   	
     testCompile 'junit:junit:4.+'
 	testCompile 'org.hamcrest:hamcrest-all:1.3'
-    testCompile 'org.apache.logging.log4j:log4j-api:2.6.2'
-    testCompile 'org.apache.logging.log4j:log4j-core:2.6.2'
-    testCompile 'org.apache.logging.log4j:log4j-slf4j-impl:2.6.2'
+    testCompile 'org.apache.logging.log4j:log4j-api:2.9.+'
+    testCompile 'org.apache.logging.log4j:log4j-core:2.9.+'
+    testCompile 'org.apache.logging.log4j:log4j-slf4j-impl:2.9.+'
 }
 
 jar {
