YMLANNO-8: bugfix: only set list type for first invocation (root)

--- a/src/test/resources/de/beosign/snakeyamlanno/constructor/persons.yaml
+++ b/src/test/resources/de/beosign/snakeyamlanno/constructor/persons.yaml
@@ -1,2 +1,8 @@
 - name: Homer
+  pets:
+  - nrMiceCaught: 10
+  - nrBarksPerDay: 20
 - name: Marge
+  pets:
+  - nrMiceCaught: 5
+  - nrBarksPerDay: 25
