--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: java
 jdk:
   - oraclejdk8
   
+before_script:
+    - wget http://services.gradle.org/distributions/gradle-4.10-bin.zip
+    - unzip gradle-4.10-bin.zip
+    - export GRADLE_HOME=$PWD/gradle-4.10
+    - export PATH=$GRADLE_HOME/bin:$PATH
+  
 after_success:
   - bash <(curl -s https://codecov.io/bash)
     
