[eclipse] rename project so it is aligned with gradle's project name

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>snakeyaml-anno</name>
+	<name>snakeyamlanno</name>
 	<comment></comment>
 	<projects>
 	</projects>
