[travis] use openjdk8 instead of faling oraclejdk8

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 jdk:
-  - oraclejdk8
+  - openjdk8
   
 before_install:
     - wget http://services.gradle.org/distributions/gradle-4.10-bin.zip
