--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jdk:
   - openjdk8
   
 before_install:
-    - wget http://services.gradle.org/distributions/gradle-4.10-bin.zip
+    - wget https://services.gradle.org/distributions/gradle-4.10-bin.zip
     - unzip gradle-4.10-bin.zip
     - export GRADLE_HOME=$PWD/gradle-4.10
     - export PATH=$GRADLE_HOME/bin:$PATH
