--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'jacoco'
 
+group = 'de.beosign'
 version = '1.1.0'
 
 check.dependsOn jacocoTestReport
