--- a/build.gradle
+++ b/build.gradle
@@ -33,15 +33,13 @@ sourceCompatibility=1.8
 targetCompatibility=1.8
 
 dependencies {
-        //gradle maven plugin is not translating "+" to [X,)
+    //gradle maven plugin is not translating "+" to [X,)
 	compile 'org.yaml:snakeyaml:1.26'
-	compile 'org.slf4j:slf4j-api:[1.7.0,)'
   	compile 'org.apache.commons:commons-lang3:[3.0,)'
-  	compile 'commons-io:commons-io:2.6'
-  	compile 'commons-beanutils:commons-beanutils:[1.9.0,)'
   	
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.6.+'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
+    testCompile 'org.slf4j:slf4j-api:1.7.+'
     testCompile 'org.apache.logging.log4j:log4j-api:2.9.+'
     testCompile 'org.apache.logging.log4j:log4j-core:2.9.+'
     testCompile 'org.apache.logging.log4j:log4j-slf4j-impl:2.9.+'
