--- a/build.gradle
+++ b/build.gradle
@@ -34,17 +34,16 @@ targetCompatibility=1.8
 
 dependencies {
     //gradle maven plugin is not translating "+" to [X,)
-	compile 'org.yaml:snakeyaml:1.26'
-	compile 'org.slf4j:slf4j-api:[1.7.0,1.8.0)'
-  	compile 'org.apache.commons:commons-lang3:[3.0,3.1)'
-  	compile 'commons-io:commons-io:2.6'
-  	compile 'commons-beanutils:commons-beanutils:[1.9.0,1.9.4]'
-  	
+    compile 'org.yaml:snakeyaml:1.26'
+    compile 'org.slf4j:slf4j-api:[1.7.0,1.8.0)'
+    compile 'org.apache.commons:commons-lang3:[3.0,3.1)'
+
     testCompile 'org.junit.jupiter:junit-jupiter-api:[5.6.0,5.6.3]'
 	testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'org.apache.logging.log4j:log4j-api:[2.9.0,2.12.0]'
     testCompile 'org.apache.logging.log4j:log4j-core:[2.9.0,2.12.0]'
     testCompile 'org.apache.logging.log4j:log4j-slf4j-impl:[2.9.0,2.12.0)'
+    testCompile 'commons-io:commons-io:2.6'
     
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:[5.6.0,5.6.3]';
 }
