--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'jacoco'
 
 group = 'de.beosign'
-version = '1.2.0'
+version = '1.3.0'
 
 check.dependsOn jacocoTestReport
 
@@ -33,18 +33,18 @@ targetCompatibility=1.8
 
 dependencies {
     //gradle maven plugin is not translating "+" to [X,)
-    implementation 'org.yaml:snakeyaml:1.26'
-    implementation 'org.apache.commons:commons-lang3:[3.0,3.1)'
+    implementation 'org.yaml:snakeyaml:1.29'
+    implementation 'org.apache.commons:commons-lang3:[3,4)'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:[5.7.0,5.7.1]'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:[5.8,5.9)'
 	testImplementation 'org.hamcrest:hamcrest-all:1.3'
-    testImplementation 'org.slf4j:slf4j-api:[1.7.0,1.8.0)'
-    testImplementation 'org.apache.logging.log4j:log4j-api:[2.9.0,2.12.0]'
-    testImplementation 'org.apache.logging.log4j:log4j-core:[2.9.0,2.12.0]'
-    testImplementation 'org.apache.logging.log4j:log4j-slf4j-impl:[2.9.0,2.12.0)'
-    testImplementation 'commons-io:commons-io:2.6'
+    testImplementation 'org.slf4j:slf4j-api:[1.7,1.8)'
+    testImplementation 'org.apache.logging.log4j:log4j-api:[2.15.0,3)'
+    testImplementation 'org.apache.logging.log4j:log4j-core:[2.15.0,3)'
+    testImplementation 'org.apache.logging.log4j:log4j-slf4j-impl:[2.15.0,3)'
+    testImplementation 'commons-io:commons-io:[2,3)'
     
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:[5.7.0,5.7.1]';
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:[5.8,5.9)';
 }
 
 test {
